--- a/FarhangbookStore/Areas/Administrator/Views/Product/AddProprtyName.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Product/AddProprtyName.cshtml
@@ -35,7 +35,7 @@
         </div>
     </div>
     <div class="portlet-body">
-        <div class="alert alert-info">
+        <div class="alert alert-warning">
             <strong>دقت فرمایید!</strong> برای ثبت خصوصیات یا ویژه گی، ابتدا آن را در کادر زیر وارد کرده، دسته بندی خود را انتخاب و سپس بر روی دکمه<span class="badge bg-blue-ebonyclay bg-font-blue-ebonyclay"> ثبت ویژه گی برای زیردسته ها </span> کلیک نمایید.
         </div>
         <!--نمایش پیغام موفقیت آمیز بودن ثبت یا خطای درج اطلاعات در برنامه-->
@@ -98,7 +98,7 @@
                                         <!--نمایش زیردسته های ثبت شده-->
                                         <select id="select-category" data-style="btn-primary" class="bs-select selectpicker form-control" asp-items="@(new SelectList(ViewBag.Category, "Categoryid","CategoryFaTitle"))"></select>
                                     </div>
-                                    <div class="form-group"> 
+                                    <div class="form-group">
                                         <button type="submit" data-loading-text="در حال بررسی ..." value="ثبت اطلاعات" class="btn-block btn btn-primary mt-ladda-btn ladda-button mt-progress-demo" data-style="slide-left"> ثبت و ذخیره نهایی<i class="fa fa-save ml-2"></i></button>
                                     </div>
                                 </div>
@@ -110,9 +110,12 @@
                             <div class="panel-heading bg-blue-steel bg-font-blue-steel">
                                 <h4 class="panel-title text-center bg-blue-steel bg-font-blue-steel">نمایش ویژه گی های ثبت شده برای زیردسته های موجود</h4>
                             </div>
-                            <div class="panel-body">
-                                <div class="text-center col-sm-12 col-md-12">
-                                    <div class="desc ListCategory"></div>
+                            <div class="scroller" style="height: 235px;" data-always-visible="1" data-rail-visible1="0" data-handle-color="#D7DCE2">
+                                <div class="panel-body">
+                                    <div class="text-center col-sm-12 col-md-12">
+                                        <!--نمایش اضافه شدن ویژه گی ها به هر زیردسته-->
+                                        <div class="desc ListCategory"></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
