--- a/FarhangbookStore/Areas/Administrator/Views/Product/AddProprtyName.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Product/AddProprtyName.cshtml
@@ -96,7 +96,7 @@
                                     </div>
                                     <div class="form-group">
                                         <!--نمایش زیردسته های ثبت شده-->
-                                        <select id="select-category" data-style="btn-primary" class="bs-select selectpicker form-control" asp-items="@(new SelectList(ViewBag.Category, "Categoryid","CategoryFaTitle"))"></select>
+                                        <select id="select-category" data-style="btn-primary" class="bs-select selectpicker form-control" data-live-search="true" data-size="5" asp-items="@(new SelectList(ViewBag.Category, "Categoryid","CategoryFaTitle"))"></select>
                                     </div>
                                     <div class="form-group">
                                         <button type="submit" data-loading-text="در حال بررسی ..." value="ثبت اطلاعات" class="btn-block btn btn-primary mt-ladda-btn ladda-button mt-progress-demo" data-style="slide-left"> ثبت و ذخیره نهایی<i class="fa fa-save ml-2"></i></button>
