--- a/FarhangbookStore/Areas/Administrator/Views/Product/UpdatePropertyName.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Product/UpdatePropertyName.cshtml
@@ -100,7 +100,7 @@
                                     </div>
                                     <div class="form-group">
                                         <!--نمایش زیردسته های ثبت شده-->
-                                        <select id="select-category" data-style="btn-primary" class="bs-select selectpicker form-control">
+                                        <select id="select-category" data-style="btn-primary" class="bs-select selectpicker form-control" data-live-search="true" data-size="5">
                                             @foreach (var item in TBLProductCategories)
                                             {
                                                 if (viewModelPopertyNameForUpdate.Where(c => c.Categoryid == item.Categoryid).Any())
