--- a/FarhangbookStore/Areas/Administrator/Views/Product/UpdatePropertyName.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Product/UpdatePropertyName.cshtml
@@ -33,7 +33,7 @@
             <a href="#" role="button" class="btn btn-outline red-thunderbird" id="Refresh_blockui"> بروزرسانی داده ها <i class="fa-solid fa fa-refresh fa-spinner fa-spin"></i></a>
             <a asp-area="Administrator" asp-controller="Product" asp-action="ShowAllPropertyname" role="button" class="btn green-jungle"> مدیریت خصوصیات و ویژه گی </a>
             @*             <a href="#showmodal=@Url.Page("./Index", "Create")" role="button" class="btn btn-outline green-haze"> ثبت کتاب جدید <i class="fa fa-plus ml-2"></i></a> *@
-            <a asp-area="Administrator" asp-controller="Home" asp-action="Index" role="button" class="btn dark btn-outline popovers" data-trigger="hover" data-placement="top" data-content="بازگشت به پنل مدیریت"> بازگشت </a>
+            <a asp-area="Administrator" asp-controller="Home" asp-action="Index" role="button" class="btn dark btn-outline popovers" data-trigger="hover" data-placement="top" data-content="بازگشت به پنل مدیریت"> بازگشت به پنل مدیریت <i class="fa fa-angle-left"></i> </a>
         </div>
     </div>
     <div class="portlet-body">
@@ -127,8 +127,8 @@
                     </div>
                     <div class="col-md-6 col-lg-6 col-sm-12">
                         <div class="panel">
-                            <div class="panel-heading bg-blue-steel bg-font-blue-steel">
-                                <h4 class="panel-title text-center bg-blue-steel bg-font-blue-steel">نمایش ویژه گی های ثبت شده برای زیردسته های موجود</h4>
+                            <div class="panel-heading bg-blue-ebonyclay bg-font-blue-ebonyclay">
+                                <h4 class="panel-title text-center bg-blue-ebonyclay bg-font-blue-ebonyclay">نمایش ویژه گی های ثبت شده برای زیردسته های موجود</h4>
                             </div>
                             <div class="scroller" style="height: 235px;" data-always-visible="1" data-rail-visible1="0" data-handle-color="#D7DCE2">
                                 <div class="panel-body">
