--- a/FarhangbookStore/Areas/Administrator/Views/Publisher/ShowAllPublisher.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Publisher/ShowAllPublisher.cshtml
@@ -21,7 +21,7 @@
             <div class="actions">
                 <a href="#" role="button" class="btn btn-outline red-thunderbird popovers" data-trigger="hover" data-placement="top" data-content="تازه سازی اطلاعات در مواقع ضروری" id="Refresh_blockui"> بروزرسانی داده ها <i class="fa-solid fa fa-refresh fa-spinner fa-spin"></i></a>
                 <a asp-area="Administrator" asp-controller="Publisher" asp-action="AddPublisher" role="button" class="btn green-jungle"> ثبت ناشر جدید <i class="fa fa-plus ml-2"></i></a>
-                <a asp-area="Administrator" asp-controller="Home" asp-action="Index" role="button" class="btn dark btn-outline popovers" data-trigger="hover" data-placement="top" data-content="بازگشت به پنل مدیریت"> بازگشت به پنل مدیریت </a>
+            <a asp-area="Administrator" asp-controller="Home" asp-action="Index" role="button" class="btn dark btn-outline popovers" data-trigger="hover" data-placement="top" data-content="بازگشت به پنل مدیریت"> بازگشت به پنل مدیریت <i class="fa fa-angle-left"></i></a>
             </div>
         </div>
         <div class="portlet-body">
