--- a/FarhangbookStore/Areas/Administrator/Views/Shared/_SiteReferencesCSS.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Shared/_SiteReferencesCSS.cshtml
@@ -20,6 +20,9 @@
 <link href="~/Admin/notify/noty.min.css" rel="stylesheet" type="text/css" asp-append-version="true" />
 <link href="~/Admin/global/plugins/bootstrap-fileinput/bootstrap-fileinput.css" rel="stylesheet" asp-append-version="true" />
 <link href="~/Admin/global/plugins/jquery-ui/jquery-ui.min.css" rel="stylesheet" asp-append-version="true" />
+<link href="~/Admin/global/plugins/fancybox/source/jquery.fancybox.css" rel="stylesheet" asp-append-version="true" />
+<link href="~/Admin/global/plugins/cubeportfolio/css/cubeportfolio.css" rel="stylesheet" asp-append-version="true" />
+<link href="~/Admin/global/plugins/cubeportfolio/css/cubeportfolio.min.css" rel="stylesheet" asp-append-version="true" />
 <link href="~/Admin/notifyToastr/toastr.css" rel="stylesheet" asp-append-version="true" />
 <link href="~/Admin/notifyToastr/toastr.min.css" rel="stylesheet" asp-append-version="true" />
 <link href="~/lib/jstree/themes/proton/style.css" rel="stylesheet" asp-append-version="true" />
