--- a/FarhangbookStore/Areas/Administrator/Views/Shared/_SiteReferencesJS.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Shared/_SiteReferencesJS.cshtml
@@ -30,6 +30,9 @@
 <script src="~/Admin/global/plugins/flot/jquery.flot.min.js" type="text/javascript" asp-append-version="true"></script>
 <script src="~/Admin/global/plugins/flot/jquery.flot.resize.min.js" type="text/javascript" asp-append-version="true"></script>
 <script src="~/Admin/global/plugins/flot/jquery.flot.categories.min.js" type="text/javascript" asp-append-version="true"></script>
+<script src="~/Admin/global/plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript" asp-append-version="true"></script>
+<script src="~/Admin/global/plugins/cubeportfolio/js/jquery.cubeportfolio.js" type="text/javascript" asp-append-version="true"></script>
+<script src="~/Admin/global/plugins/cubeportfolio/js/jquery.cubeportfolio.min.js" type="text/javascript" asp-append-version="true"></script>
 <script src="~/Admin/global/plugins/jquery-easypiechart/jquery.easypiechart.min.js" type="text/javascript" asp-append-version="true"></script>
 <script src="~/Admin/global/plugins/jquery.sparkline.min.js" type="text/javascript" asp-append-version="true"></script>
 <script src="~/Admin/global/plugins/jqvmap/jqvmap/jquery.vmap.js" type="text/javascript" asp-append-version="true"></script>
