--- a/FarhangbookStore/Areas/Administrator/Views/Writer/ShowAllWriter.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Writer/ShowAllWriter.cshtml
@@ -23,7 +23,7 @@
             <a asp-area="Administrator" asp-controller="Writer" asp-action="AddWriter" role="button" class="btn green-jungle"> ثبت نویسنده (مؤلف) جدید <i class="fa fa-plus ml-2"></i></a>
             @* <a href="#showmodal=/Administrator/Writer/AddWriter" role="button" class="btn green-jungle"> ثبت نویسنده جدید <i class="fa fa-plus ml-2"></i></a> *@
             @*             <a href="#showmodal=@Url.Page("./Index", "Create")" role="button" class="btn btn-outline green-haze"> ثبت کتاب جدید <i class="fa fa-plus ml-2"></i></a> *@
-            <a asp-area="Administrator" asp-controller="Home" asp-action="Index" role="button" class="btn dark btn-outline popovers" data-trigger="hover" data-placement="top" data-content="بازگشت به پنل مدیریت"> بازگشت به پنل مدیریت </a>
+            <a asp-area="Administrator" asp-controller="Home" asp-action="Index" role="button" class="btn dark btn-outline popovers" data-trigger="hover" data-placement="top" data-content="بازگشت به پنل مدیریت"> بازگشت به پنل مدیریت <i class="fa fa-angle-left"></i></a>
         </div>
     </div>
     <div class="portlet-body">
