--- a/FarhangbookStore/Areas/Administrator/Views/GroupBooks/ShowAllGroupBooks.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/GroupBooks/ShowAllGroupBooks.cshtml
@@ -1,34 +1,27 @@
-﻿@model FarhangbookStore.DataModel.Entities.TBL_ProductWriter
-@inject FarhangbookStore.PublicExtentions.ConvertDate convertDate
+﻿@using FarhangbookStore.DataModel.Entities;
+@model IEnumerable<TBL_ProductGroupBooks>
 @{
-    ViewData["Title"] = "ثبت نویسنده جدید | فروشگاه اینترنتی بانک کتاب شیراز";
+    ViewData["Title"] = "نمایش کلیه گروه بندی کتاب ها | فروشگاه اینترنتی بانک کتاب شیراز";
     Layout = "~/Areas/Administrator/Views/Shared/_AdminLayout.cshtml";
 }
-
-@section scripts
-{
-    <partial name="_ValidationScriptsPartial" />
-}
-
-<link href="~/lib/persiandatepicker/jquery.Bootstrap-PersianDateTimePicker.css" rel="stylesheet" asp-append-version="true" />
-<link href="~/lib/animated/animate.min.css" rel="stylesheet" asp-append-version="true" />
 
 <div class="m-heading-1 border-yellow-crusta m-bordered">
     <h4 class="bold">راهنما</h4>
     <p>
-        کاربرگرامی: شما در این بخش می توانید علاوه بر ثبت نویسنده جدید، جهت مدیرت نویسنده های ثبت شده بر روی دکمه <span class="bold">مدیریت نویسنده ها</span> کلیک نمایید.
+        کاربرگرامی: شما در این بخش می توانید علاوه بر ثبت ، <span class="bold">گروه بندی کتاب ها</span> مدیریت اطلاعات گروه بندی کتاب ها را هم ببینید.
     </p>
 </div>
 <!-- BEGIN CONTAINER -->
 <div class="portlet light portlet-fit portlet-datatable bordered">
     <div class="portlet-title">
         <div class="caption">
-            <i class="icon-folder-alt font-green"></i>
-            <span class="caption-subject font-green-sharp bold uppercase tooltips" data-container="body" data-placement="top" data-original-title="Tooltip in top">ثبت نویسنده جدید</span>
+            <i class=" icon-layers font-green"></i>
+            <span class="caption-subject font-green-sharp bold uppercase">مدیریت گروه بندی کتاب ها</span>
         </div>
         <div class="actions">
-            <a href="#" role="button" class="btn btn-outline red-thunderbird" id="Refresh_blockui"> بروزرسانی داده ها <i class="fa-solid fa fa-refresh fa-spinner fa-spin"></i></a>
-            <a asp-area="Administrator" asp-controller="Writer" asp-action="ShowAllWriter" role="button" class="btn green-jungle"> مدیریت نویسنده ها </a>
+            <a href="#" role="button" class="btn btn-outline red-thunderbird popovers" data-trigger="hover" data-placement="top" data-content="تازه سازی اطلاعات در مواقع ضروری" id="Refresh_blockui"> بروزرسانی داده ها <i class="fa-solid fa fa-refresh fa-spinner fa-spin"></i></a>
+            <a asp-area="Administrator" asp-controller="GroupBooks" asp-action="AddGroupBooks" role="button" class="btn green-jungle"> ثبت گروه بندی کتاب جدید <i class="fa fa-plus ml-2"></i></a>
+            @* <a href="#showmodal=/Administrator/Writer/AddWriter" role="button" class="btn green-jungle"> ثبت نویسنده جدید <i class="fa fa-plus ml-2"></i></a> *@
             @*             <a href="#showmodal=@Url.Page("./Index", "Create")" role="button" class="btn btn-outline green-haze"> ثبت کتاب جدید <i class="fa fa-plus ml-2"></i></a> *@
             <a asp-area="Administrator" asp-controller="Home" asp-action="Index" role="button" class="btn dark btn-outline popovers" data-trigger="hover" data-placement="top" data-content="بازگشت به پنل مدیریت"> بازگشت به پنل مدیریت <i class="fa fa-angle-left"></i></a>
         </div>
@@ -70,41 +63,46 @@
                 </script>
             }
         }
-        <!-- PERSONAL INFO TAB -->
-        <form asp-area="Administrator" asp-controller="Writer" asp-action="AddWriter" enctype="multipart/form-data">
-            <!-- دسته بندی اصلی جهت اضافه کردن زیردسته ID بازگشت مقدار  -->
-            <div class="panel-body">
-                <div class="row">
-                    <div class="col-md-10 col-xl-12 col-sm-12">
-                        <div class="form-group">
-                            @* <label asp-for="CategoryFaTitle" class="control-label"></label> *@
-                            <div class="input-icon right">
-                                <i class="icon-folder-alt"></i>
-                                <input asp-for="WriterFaTitle" class="form-control input-icon right" autofocus="autofocus" placeholder="نام نویسنده یا مؤلف را به فارسی وارد نمایید." />
-                            </div>
-                            <span asp-validation-for="WriterFaTitle" id="inputError" class="bg-red-thunderbird bg-font-red-thunderbird"></span>
-                        </div>
-                    </div>
-                    <div class="col-md-2 col-xl-12 col-sm-12">
-                        <button type="submit" data-loading-text="در حال بررسی ..." value="ثبت اطلاعات" class="btn-block btn btn-primary mt-ladda-btn ladda-button mt-progress-demo" data-style="slide-left"> ثبت و ذخیره <i class="fa fa-save ml-2"></i></button>
-                    </div>
-                </div>
-            </div>
-        </form>
-        <!-- END PERSONAL INFO TAB -->
+        <table id="Datatable_infoTable" class="table table-bordered table-striped table-condensed flip-content table-hover table-header-fixed">
+            <thead>
+                <tr class="font-white">
+                    <th class="text-center">ردیف</th>
+                    <th class="text-center">نام گروه بندی کتاب</th>
+                    <th class="text-center">عملیات</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td class="text-center">@item.GroupBookid</td>
+                        <td class="text-center">@item.GroupBookTitle</td>
+                        <td class="text-center">
+                            <a href="#showmodal=/Administrator/GroupBooks/UpdateGroupBooks/@item.GroupBookid" class="btn green-haze btn-circle btn-icon-only btn-default popovers" data-trigger="hover" data-placement="top" data-content="ویرایش اطلاعات">
+                                <i class="fa fa-pencil"></i>
+                            </a>
+                            <a href="#showmodal=/Administrator/GroupBooks/DeleteGroupBooks/@item.GroupBookid" class="btn red-thunderbird btn-circle btn-icon-only btn-default popovers" data-trigger="hover" data-placement="top" data-content="غیرفعال سازی">
+                                <i class="fa fa-ban"></i>
+                            </a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
+    <partial name="_AdminMainModal" />
 </div>
 <!-- END CONTAINER -->
 @section MainScripts {
-    <script src="~/lib/persiandatepicker/calendar.js" asp-append-version="true"></script>
-    <script src="~/lib/persiandatepicker/jquery.Bootstrap-PersianDateTimePicker.js" asp-append-version="true"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js" asp-append-version="true"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js" asp-append-version="true"></script>
+    <script src="~/lib/persiandatepicker/jquery.Bootstrap-PersianDateTimePicker.js" asp-append-version="true"></script>
+    <script src="~/lib/OpenModal.js" asp-append-version="true"></script>
     <script src="~/lib/SwalAlert/sweetAlert.js" asp-append-version="true"></script>
     <!--===================================================================-->
     <!--اسکریپت جستجوی اطلاعات-->
     <script>
-                var infoDataTable = $('#Datatable_infoTable').DataTable({
+                        var infoDataTable = $('#Datatable_infoTable').DataTable({
                 paging: true,
                 // pageLength: 5,
                 // نمایش اطلاعات جستجو شده در زیر جدول به صورت فارسی
@@ -151,4 +149,3 @@
     </script>
     <!--==================================================================-->
 }
-
